# sentence-aligner-rust

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Vagrantfile
doc/: openapi.json  openapi.yaml
src/: cors.rs  db.rs  languages.rs  main.rs  one_sentence.rs  sentences.rs
tests/: db.rs  handlers.rs  test_create_language.rs  test_create_sentence.rs  test_get_all_sentences.rs  test_get_sentence.rs  test_get_sentences_by_language.rs  test_put_sentence.rs
utils/: tests_commons.rs
