[package]
name = "sentence-aligner"
version = "0.1.0"
authors = ["allan.simon@supinfo.com"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version="=0.3.6", features=["uuid", "json"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

uuid = { version = "0.5", features = ["serde", "v4"] }

postgres = { version = "0.15", features = ["with-uuid"]}

r2d2 = "0.7"
r2d2_postgres = "0.13"

reqwest = "0.8.1"

xml-rs = "0.7.0"

[dev-dependencies]
interface-tests-helpers = "*"
